[package]
name = "nexum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-recursion = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
hyper = { version = "0.14.18", features = ["full"] }
aws-config = "0.2.0"
aws-sdk-sqs = "0.2.0"
structopt = { version = "0.3", default-features = false }

mobc = "0.7.3"
mobc-postgres = "0.7.0"
mobc-redis = "0.7.0"

postgres = {version = "0.19.1", features = ["with-chrono-0_4"] }

redis = { version = "0.21.5", features = ["tokio-comp"] }
reqwest = { version = "0.11.11", features = ["json"] }


seahash = "4.1.0"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
tokio-postgres = "0.7.6"

[dev-dependencies]
rand = "0.8.5"

