[package]
name = "nexum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-recursion = "1.0.0"
chrono = { version = "0.4.23", features = ["serde"] }
hyper = { version = "0.14.23", features = ["full"] }
aws-config = "0.51.0"
aws-sdk-sqs = "0.21.0"
structopt = { version = "0.3.26", default-features = false }

mobc = "0.7.3"
mobc-postgres = "0.7.0"
mobc-redis = "0.7.0"

postgres = {version = "0.19.4", features = ["with-chrono-0_4"] }

redis = { version = "0.22.1", features = ["tokio-comp"] }
reqwest = { version = "0.11.13", features = ["json"] }


seahash = "4.1.0"

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["full"] }
tokio-postgres = "0.7.6"

[dev-dependencies]
rand = "0.8.5"

